fix navbarm overflow

--- a/website/public/scss/site/components/_navbar.scss
+++ b/website/public/scss/site/components/_navbar.scss
@@ -68,6 +68,8 @@
     background-size: 100% 100%;
     height: 60px;
     top: -60px;
+    right: 0;
+    left: 0;
     opacity: 0;
     transition: all .4s ease-out;
     > .logo {
